- Enh: Added CHttpRequest->xSendFile() to process file download requests by using X-Sendfile header (mdomba)
- Chg #1914: Composite foreign keys should be separated by commas in CActiveRecord::relations() (Qiang)
- Chg #1949: CGridView will now display the first page after changing filters (Qiang)
- Chg: isset($model->x) and isset($model['x']) are now identical for CActiveRecord models (Sam Dark)
- New #1191: Implemented the database migration feature (Qiang)
- New: Added query builder (Qiang)


Version 1.1.5 November 14, 2010
-------------------------------
- Bug #997: Fixed the bug that relational AR query with page-by and sorting may fail to work for SQL Server (Qiang)
- Bug #1130: Fixed the bug when renderDynamic and beginCache was used together without page caching (mdomba)
- Bug #1244: Fixed the bug that CDbCommandBuilder::createCountCommand may generate invalid SQL when having and/or group options are used (Qiang)
- Bug #1420: Fixed the bug that the table alias set in the model was not honored in STAT AR queries (Qiang)
- Bug #1565: Fixed the bug that COutputCache may fail to work when used to cache whole pages (Qiang)
- Bug #1577: Fixed the bug in CMssqlSchema::compareTableNames() (Qiang)
- Bug #1592: Fixed the bug that the hidden field generated by CHtml::checkBox may have the same ID as the checkbox. (Qiang)
- Bug #1615: Fixed the bug that caused CLogFilter::filter() to add context informations when the log was empty (Y!!)
- Bug #1643: Fixed the bug that CFileValidator may cause a PHP error when using maxFiles>1 and the model attribute returning unexpected array (Qiang)
- Bug #1647: Fixed the bug that CActiveRelation may attempt to set an undefined 'together' property when merging with a criteria (Qiang)
- Bug #1653: Fixed the bug that in PHP 5.3 CArrayDataProvider will fail due to incorrect parameters sent to array_multisort (Qiang)
- Bug #1655: Fixed the bug in COciSchema about checking DB schema (Qiang)